# byobu

./: .bzrignore  .gitattributes  .gitignore  .gitmodules  AUTHORS  CONTRIBUTING  ChangeLog  Makefile.am  NEWS  README  README.md  autogen.sh  base-screenrc  byobu  byobu-config  byobu-config.1  byobu-export  byobu-export.1  byobu-janitor  byobu-launcher  byobu-launcher-install  byobu-launcher-uninstall  byobu-launcher.1  byobu-reconnect-sockets  byobu-reconnect-sockets.1  byobu-select-profile  byobu-select-profile.1  byobu-status  byobu-status-detail  byobu-status.1  byobu.1  byobu.txt  configure.ac  launchpad_auth.py  launchpad_auth_manual.py  launchpad_auth_phase1.py  launchpad_auth_phase2.py  launchpad_auth_simple.py  launchpad_close_bugs.py  motd+shell  (+22 more)
.claude/commands/: byobu-triage.md  deb-build.md  open-dev.md  ppa-build.md  rc-build.md  release.md
.github/workflows/: ci.yaml  ci.yml  pypi-publish.yml  release.yaml
.maintainer/: DEBIAN_PACKAGING_CONTEXT.md  release.py
.maintainer/debian/: changelog  config  copyright  gbp.conf  links  postinst  postrm  salsa-ci.yml  source_byobu.py  watch
.maintainer/debian/po/: de.po  en_GB.po  es.po  fr.po  nl.po  pt.po  templates.pot  zh_CN.po  (+1 more)
debian/: byobu-extras.install  byobu-mobile.dirs  byobu-mobile.install  byobu.install  byobu.lintian-overrides  byobu.manpages  changelog  config  control  copyright  dirs  docs  gbp.conf  install  links  manpages  postinst  postrm  preinst  prerm  release-build.sh  release.sh  rules  salsa-ci.yml  screen-profiles-extras.install  screen-profiles.postinst  source_byobu.py  templates  trustmux.dirs  trustmux.docs  trustmux.install  trustmux.lintian-overrides  watch
debian/lintian/: byobu
debian/po/: de.po  en_GB.po  es.po  pt.po  pt_BR.po  ru.po  sv.po  templates.pot  zh_CN.po  zh_TW.po
debian/source/: lintian-overrides
debian/upstream/: metadata
desktop/: byobu.desktop
doc/: Byobu.odp  byobu_calug_final.odp  help.txt
etc/bash_completion.d/: byobu  screen  tmux
etc/byobu/: Makefile.am  backend  socketdir  statusrc
etc/profile.d/: Makefile.am  Z97-byobu.sh  Z97-byobu.sh.in
etc/update-motd.d/: 55-window-manager  Makefile.am
experimental/: README  byobu-aggregate-status  byobu-classroom  byobu-status-all  byobu.php
homebrew/Formula/: byobu.rb  trustmux.rb
keybindings/: common  common.disable  f-keys  none  screen-escape-keys
mobile/: Makefile.am  README.md  byobu-mobile-ctl  byobu-mobile-disable  byobu-mobile-enable  byobu-mobile-pair  byobu-mobile-unpair  byobu_mobile.py  generate_screenshots.py  pyproject.toml  requirements.txt  trustmux-ctl  trustmux-ctl.in  trustmux-daemon  trustmux-daemon.in  trustmux-disable  trustmux-disable.in  trustmux-enable  trustmux-enable.in  trustmux-pair  trustmux-pair.in  trustmux-unpair  trustmux-unpair.in  trustmux.in  trustmux.py  trustmuxd.in
mobile/bash-completion/: trustmux
mobile/man/man1/: trustmux-ctl.1  trustmux-disable.1  trustmux-enable.1  trustmux-pair.1  trustmux-unpair.1  trustmux.1  trustmuxd.1
mobile/static/: app.js  index.html  manifest.json  sw.js
mobile/tests/: test_ctl.py  test_daemon.py  test_daemon_extended.py
mobile/trustmux/: __init__.py  __main__.py  _ctl.py  _daemon.py  _disable.py  _enable.py  _pair.py  _unpair.py
mobile/trustmux/static/: app.js  index.html  sw.js
openbsd/: Makefile  distinfo
openbsd/pkg/: DESCR  PLIST
po/: POTFILES.Python  POTFILES.Shell  POTFILES.python  POTFILES.sh  bg.po  byobu-en_GB.po  byobu-fr.po  byobu-hu.po  byobu-id.po  byobu-ja.po  byobu-la.po  byobu-nl.po  byobu-ru.po  byobu-sv.po  byobu.pot  cs.po  de.po  en_GB.po  en_GB.po.moved  es.po  fr.po  hu.po  hu.po.moved  id.po  is.po  it.po  ja.po  ja.po.moved  ka.po  la.po  la.po.moved  lt.po  messages.pot  nl.po  pt.po  pt_BR.po  ru.po  screen-profiles.pot  sv.po  sv.po.moved  (+2 more)
po4a/: po4a.conf
po4a/po/: screen-profiles.pot  screen-utils.pot
profiles/: NONE  byoburc  common  debian  debian.screenrc  fedora  fedora.screenrc  generate  generate-profiles  plain  profile.skel  redhat  redhat.screenrc  ubuntu  ubuntu.key  ubuntu.screenrc
profiles/logos/: arch  centos  debian  fedora  gentoo  mandriva  novell  redhat  slackware  suse  ubuntu
profiles_generator/: generate  profile.skel
rpm/: byobu.spec  fedoracommon
snap/: snapcraft.yaml
testing/: time_notifications
testing/docker/: DOCKER-TESTING.md  Dockerfile.ubuntu  Dockerfile.wolfi  README.md  test-containers.sh
tests/: openbsd.bats  smoke.bats  syntax.bats
usr/lib/byobu/: .common  .constants  .dirs  .notify_osd  .shutil  Makefile.am  apport  arch  battery  color  cpu_count  cpu_freq  cpu_temp  custom  date  disk  disk_io  distro  ec2_cost  entropy  fan_speed  hostname  ip_address  load_average  load_average_full  logo  mail  mem_available  mem_used  memory  menu  mpc  network  notify_osd  packages  processes  raid  rcs_cost  reboot_required  release  (+16 more)
usr/lib/byobu/include/: Makefile.am  colors  common  config.py  config.py.in  constants  cycle-status  dirs  dirs.in  ec2instancespricing.py  icons  layout  modrian  mondrian  notify_osd  select-session.py  shutil  tmux-detach-all-but-current-client  tmux-send-command-to-all-panes  tmux-send-command-to-all-windows  toggle-utf8  toggle-utf8.in
usr/sbin/: byobu-classroom
usr/share/byobu/pixmaps/: Makefile.am
usr/share/byobu/pixmaps/highcontrast/: Makefile.am
usr/share/man/man1/: Makefile.am  byobu-config.1  byobu-ctrl-a.1  byobu-disable-color-prompt.1  byobu-disable-prompt.1  byobu-disable.1  byobu-enable-color-prompt.1  byobu-enable-prompt.1  byobu-enable.1  byobu-export.1  byobu-janitor.1  byobu-keybindings.1  byobu-launch.1  byobu-launcher-install.1  byobu-launcher-uninstall.1  byobu-launcher.1  byobu-layout.1  byobu-prompt.1  byobu-quiet.1  byobu-reconnect-sockets.1  byobu-screen.1  byobu-select-backend.1  byobu-select-profile.1  byobu-select-session.1  byobu-shell.1  byobu-silent.1  byobu-status-detail.1  byobu-status.1  byobu-tmux.1  byobu-ugraph.1  byobu-ulevel.1  byobu.1  col1.1  ctail.1  manifest.1  purge-old-kernels.1  shell.1  vigpg.1  wifi-status.1
windows/: common  default
(+65 files in other folders)
