SUBDIRS = etc/byobu \
	etc/profile.d \
	usr/share/byobu/desktop \
	usr/share/byobu/keybindings \
	usr/share/byobu/pixmaps \
	usr/share/byobu/profiles \
	usr/share/byobu/status \
	usr/share/byobu/tests \
	usr/share/byobu/windows \
	usr/share/dbus-1/services \
	usr/share/doc/byobu \
	usr/lib/byobu \
	usr/lib/byobu/include \
	usr/share/man/man1 \
	usr/bin
