#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.61])
AC_INIT(byobu, 3.0, http://byobu.co)
AM_INIT_AUTOMAKE(byobu, 3.0)
AC_PROG_LN_S

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile \
	etc/byobu/Makefile \
	etc/profile.d/Makefile \
	usr/share/applications/Makefile \
	usr/share/byobu/keybindings/Makefile \
	usr/share/byobu/pixmaps/Makefile \
	usr/share/byobu/profiles/Makefile \
	usr/share/byobu/status/Makefile \
	usr/share/byobu/tests/Makefile \
	usr/share/byobu/windows/Makefile \
	usr/share/doc/byobu/Makefile \
	usr/lib/byobu/Makefile \
	usr/lib/byobu/include/Makefile \
	usr/share/man/man1/Makefile usr/bin/Makefile)
