#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.61])
AC_INIT(byobu, 3.0, http://byobu.co)
AM_INIT_AUTOMAKE(byobu, 3.0)
AC_PROG_LN_S

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile \
	etc/byobu/Makefile \
	etc/profile.d/Makefile \
	etc/profile.d/Z97-byobu.sh
	usr/share/applications/Makefile \
	usr/bin/byobu \
	usr/bin/byobu-config \
	usr/bin/byobu-ctrl-a \
	usr/bin/byobu-disable \
	usr/bin/byobu-disable-prompt \
	usr/bin/byobu-enable \
	usr/bin/byobu-enable-prompt \
	usr/bin/byobu-export \
	usr/bin/byobu-janitor \
	usr/bin/byobu-launch \
	usr/bin/byobu-launcher \
	usr/bin/byobu-launcher-install \
	usr/bin/byobu-launcher-uninstall \
	usr/bin/byobu-layout \
	usr/bin/byobu-prompt \
	usr/bin/byobu-quiet \
	usr/bin/byobu-reconnect-sockets \
	usr/bin/byobu-select-backend \
	usr/bin/byobu-select-profile \
	usr/bin/byobu-select-session \
	usr/bin/byobu-shell \
	usr/bin/byobu-silent \
	usr/bin/byobu-status \
	usr/bin/byobu-status-detail \
	usr/bin/byobu-ugraph \
	usr/bin/byobu-ulevel \
	usr/lib/byobu/include/config.py \
	usr/lib/byobu/include/dirs \
	usr/lib/byobu/include/toggle-utf8 \
	usr/share/byobu/tests/byobu-time-notifications \
	usr/share/byobu/keybindings/Makefile \
	usr/share/byobu/pixmaps/Makefile \
	usr/share/byobu/profiles/Makefile \
	usr/share/byobu/status/Makefile \
	usr/share/byobu/tests/Makefile \
	usr/share/byobu/windows/Makefile \
	usr/share/doc/byobu/Makefile \
	usr/lib/byobu/Makefile \
	usr/lib/byobu/include/Makefile \
	usr/share/man/man1/Makefile usr/bin/Makefile)
