libdirdir = $(prefix)/lib/@PACKAGE@
libdir_SCRIPTS = apport  arch  battery  cpu_count  cpu_freq  cpu_temp  custom  date  disk  disk_io  ec2_cost  fan_speed  hostname  ip_address  load_average  logo  mail  mem_available  mem_used  menu  network  notify_osd  processes  rcs_cost  reboot_required  release  services  time  time_utc  updates_available  uptime  users  whoami  wifi_quality

