libdirdir = $(prefix)/lib/@PACKAGE@
libdir_SCRIPTS = apport  arch  battery  cpu_count  cpu_freq  cpu_temp  color  custom  date  disk  disk_io  ec2_cost  fan_speed  hostname  ip_address  load_average  logo  mail  mem_available  mem_used  menu  network  .notify_osd  notify_osd  processes  raid  rcs_cost  reboot_required  release  services  swap  time  time_binary time_utc trash updates_available  uptime  users  whoami  wifi_quality .common .constants .dirs .shutil

