pixmapsdir = $(datadir)/@PACKAGE@/pixmaps
pixmaps_DATA =                                  \
        byobu.14.png                            \
        byobu.192.png                           \
        byobu.64.png                            \
        byobu_backup.svg                        \
        byobu-banner.svg                        \
        byobu.png                               \
        byobu.svg
dist_pixmaps_DATA = $(pixmaps_DATA)
